<resources>
    <string name="app_name">Group 10-Teachers Pal</string>
    <string name="scoreList">Score List</string>
    <string name="profile">Profile</string>
    <string name="gameMenu">Game Menu</string>
    <string name="mainMenu">Main Menu</string>

    <string name="voiceChanger">Voice Changer</string>
    <string name="Puzzle">Puzzle</string>
    <string name="Memory">Memory</string>

    <string name="childT">Child\'s Name</string>
    <string name="MotherT">Mother\'s Name</string>
    <string name="FatherT">Father\'s Name</string>
    <string name="SpecialistT">Specialist</string>
    <string name="PhoneT">Phone Number</string>

    <string name="memAScore">Memory Average Score</string>
    <string name="memRScroe">Memory Most Recent Score</string>
    <string name="puzAScore">Puzzle Average Score</string>
    <string name="puzRScore">Puzzle Most Recent Score</string>
    <string name="voiceX">Times Changer Used</string>
    <string name="childName">Name</string>
    <string name="motherName">Name</string>
    <string name="fatherName">Name</string>
    <string name="specName">Name</string>
    <string name="phoneNum">Number</string>
    <string name="record">Record</string>
    <string name="playback">Playback</string>

</resources>
