<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fitfourdesktop.group10_teacherspal.ProfileView">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="78dp"
        android:layout_height="34dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:text="Child Name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="76dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="Mother"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="80dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="Father"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="Specialist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="Phone Number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/childName"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/childName"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/motherName"
        android:layout_width="123dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/motherName"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/childName" />

    <TextView
        android:id="@+id/fatherName"
        android:layout_width="126dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/fatherName"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/motherName" />

    <TextView
        android:id="@+id/specName"
        android:layout_width="131dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/specName"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/fatherName" />

    <TextView
        android:id="@+id/phoneNum"
        android:layout_width="121dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/phoneNum"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/specName" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClickProfileEdit"
        android:text="Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="Edit Profile"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />

</android.support.constraint.ConstraintLayout>
